--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,25 +1,8 @@
-<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark" style="padding-right: 1em;">
+<nav class="sb-topnav navbar navbar-expand" style="padding-right: 1em; background-image: linear-gradient(to bottom right, #590022, #a7185e);">
     <!-- Navbar Brand-->
-    <a class="navbar-brand ps-3" href="{{ url_for('main.index') }}">Clima</a>
+    <a class="navbar-brand ps-3" style="color: aliceblue; font-size: 2em; font-weight: bolder;"  href="{{ url_for('main.index') }}">DevFLIX</a>
     <!-- Sidebar Toggle-->
-    <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" style="margin-left: auto; margin-right: 1em;" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+    <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" style="margin-left: auto; color: aliceblue; font-size: 1em; box-shadow: 2px 1px #590022 ; margin-right: 1em;" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
     <!-- Navbar Search-->
-    <!-- <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
-        <div class="input-group">
-            <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
-            <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
-        </div>
-    </form> -->
-    <!-- Navbar-->
-    <!-- <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#!">Settings</a></li>
-                <li><a class="dropdown-item" href="#!">Activity Log</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#!">Logout</a></li>
-            </ul>
-        </li>
-    </ul> -->
+   
 </nav>
