--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -10,41 +10,41 @@
                     <div class="row mb-3">
                         <div class="col-md-6">
                             <div class="form-floating mb-3 mb-md-0">
-                                <input class="form-control" id="inputFirstName" type="text" placeholder="Digite o seu primeiro nome" />
+                                <input class="form-control" id="inputFirstName" type="text" name="nome" placeholder="Digite o seu primeiro nome" />
                                 <label for="inputFirstName">Nome</label>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-floating">
-                                <input class="form-control" id="inputLastName" type="text" placeholder="digite sou ultimo nome" />
+                                <input class="form-control" id="inputLastName" type="text" name="Sobrenome" placeholder="digite sou ultimo nome" />
                                 <label for="inputLastName">Sobrenome</label>
                             </div>
                         </div>
                     </div>
                     <div class="form-floating mb-3">
-                        <input class="form-control" id="CPF" type="text" placeholder="digite seu CPF" />
+                        <input class="form-control" id="CPF" type="text" name ="CPF " placeholder="digite seu CPF" />
                         <label for="inputLastName">CPF</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
+                        <input class="form-control" id="inputEmail" type="email" name="email" placeholder="name@example.com" />
                         <label for="inputEmail">E-mail</label>
                     </div>
                     <div class="row mb-3">
                         <div class="col-md-6">
                             <div class="form-floating mb-3 mb-md-0">
-                                <input class="form-control" id="inputPassword" type="password" placeholder="Crie uma senha" />
+                                <input class="form-control" id="inputPassword" type="password" name="senha" placeholder="Crie uma senha" />
                                 <label for="inputPassword">Senha</label>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-floating mb-3 mb-md-0">
-                                <input class="form-control" id="inputPasswordConfirm" type="password" placeholder="Confirme sua senha" />
+                                <input class="form-control" id="inputPasswordConfirm" type="password" name="conf-senha" placeholder="Confirme sua senha" />
                                 <label for="inputPasswordConfirm">Confirmar senha</label>
                             </div>
                         </div>
                     </div>
                     <div class="mt-4 mb-0">
-                        <div class="d-grid"><a class="btn btn-outline-success btn-block" href="{{ url_for('main.index') }}">Criar conta</a></div>
+                        <div class="d-grid"><a class="btn btn-outline-success btn-block" name="" href="{{ url_for('main.index') }}">Criar conta</a></div>
                     </div>
                 </form>
             </div>
