--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,11 +8,11 @@
                 <div class="card-body">
                     <form  method="POST">
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" required/>
+                            <input required class="form-control" id="inputEmail" name="email" type="email" placeholder="name@example.com" required/>
                             <label for="inputEmail" >E-mail</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="inputPassword" type="password" placeholder="Senha" />
+                            <input required class="form-control" id="inputPassword" name="senha" type="password" placeholder="Senha" />
                             <label for="inputPassword">Senha</label>
                         </div>
                         <div class="form-check mb-3">
