--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -6,7 +6,7 @@
         <div class="card shadow-lg border-0 rounded-lg mt-5" style="background-image: linear-gradient(to bottom right, #2f2e30, #2f2e30);">
             <div class="card-header"><h3 class="text-center font-weight-light my-4" style="color: white;">Criar Conta</h3></div>
             <div class="card-body">
-                <form method="post" >
+                <form method="post" action="{{ url_for('auth.do_register') }}">
                     <div class="row mb-3">
                         <div class="col-md-6">
                             <div class="form-floating mb-3 mb-md-0">
