criado index.hml para views de cards genericos

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,7 @@
         <title>DevFLIX</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
         <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet" />
+        <link href="{{ url_for('static', filename='css/cards.css') }}" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body class="sb-nav-fixed" style="background-color: #e1e3db;">
@@ -17,7 +18,7 @@
         <div style="background-color: #e1e3db;" id="layoutSidenav">
             {% include 'lateral_bar.html' %}
             <div  id="layoutSidenav_content">
-                <main >
+                <main>
                     <div style="background-color: #e1e3db;" class="container-fluid px-4">
                         {% block content %}{% endblock %}
                     </div>
