--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,18 +1,52 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div class="row col-12">
-    {% for i in range(10): %}
+<div class="row col-12">
 
-      <div class=" cards m-2 col-3">
-        <div class="card-img-wrapper">
-          <img src="{{ url_for('static', filename='assets/img/constantine.png')}}" alt="Card image cap">
-        </div>
-        <div class="card-info text-white">
-          <h2>Constantine</h2>
-          <p>Ação e Terror</p>
-        </div>
-      </div>
-    {% endfor %}
+  {% for i in pages.items %}
+  <div class=" cards m-2 col-3">
+    <div class="card-img-wrapper">
+
+      <img src="{{ url_for('static', filename=i.endereco)}}" alt="Card image cap">
+    </div>
+    <div class="card-info text-white">
+      <h2>Constantine</h2>
+      <p>Ação e Terror</p>
+    </div>
   </div>
+  {% endfor %}
+  
+  <!-- Pagination Links-->
+  <div class="text-right">
+    <a href="{{ url_for('main.index', page=pages.prev_num) }}" class="btn btn-outline-dark 
+     {% if pages.page == 1 %}disabled{% endif %}">
+      &laquo;
+    </a>
+    <!-- Loop through the number of pages to display a link for each-->
+    {% for page_num in pages.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+    {% if page_num %}
+    <!-- Check for the active page and set the link to "Active"-->
+    {% if pages.page == page_num %}
+    <a href="{{ url_for('main.index', page=page_num) }}" class="btn btn-dark">
+      {{ page_num }}
+    </a>
+    {% else %}
+    <a href="{{ url_for('main.index', page=page_num) }}" class="btn btn-outline-dark">
+      {{ page_num }}
+    </a>
+    {% endif %}
+    {% else %}
+    ...
+    {% endif %}
+    {% endfor %}
+    <a href="{{ url_for('main.index', page=pages.next_num) }}" class="btn btn-outline-dark 
+     {% if pages.page == pages.pages %}disabled{% endif %}">
+      &raquo;
+    </a>
+  </div>
+  <!-- <p class="text-right mt-3">
+    Mostrando page {{ pages.page }} of {{ pages.pages }}
+  </p> -->
+
+</div>
 {% endblock %}
