--- a/app/templates/lateral_bar.html
+++ b/app/templates/lateral_bar.html
@@ -1,7 +1,13 @@
 <div id="layoutSidenav_nav">
     <nav class="sb-sidenav accordion" style=" background-image: linear-gradient(to top left, #00001a, #182e54);"id="sidenavAccordion">
         <div class="sb-sidenav-menu">
-            <div class="nav">              
+            <div class="nav">
+                <a class="nav-link" href="{{ url_for('main.index') }}">
+                    <div class="sb-nav-link-icon" style="color: white;"><i class="fas fa-solid fa-home"></i></div>
+                    <div style="color: white; margin: auto;">
+                        Home
+                    </div>
+                </a>                              
                 <a class="nav-link" href="{{ url_for('auth.login') }}">
                     <div class="sb-nav-link-icon" style="color: white;"><i class="fas fa-solid fa-sign-in"></i></div>
                     <div style="color: white; margin: auto;">
@@ -12,6 +18,12 @@
                     <div class="sb-nav-link-icon"  style="color: white;"><i class="fas fa-solid fa-user-plus"></i></div>
                     <div style="color: white; margin: auto;">
                         Registro
+                    </div>
+                </a>
+                <a class="nav-link" href="{{ url_for('auth.logout') }}">
+                    <div class="sb-nav-link-icon"  style="color: white;"><i class="fa-solid fa-arrow-right-from-bracket"></i></i></div>
+                    <div style="color: white; margin: auto;">
+                        Logout
                     </div>
                 </a>
             </div>
