--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,7 @@
             <div  id="layoutSidenav_content">
                 <main>
                     <div style="background-color: #e1e3db;" class="container-fluid px-4">
+                        {% block page %}{% endblock %}
                         {% block content %}{% endblock %}
                     </div>
                 </main>
