--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -22,7 +22,7 @@
                         </div>
                     </div>
                     <div class="form-floating mb-3">
-                        <input required class="form-control" id="CPF" name="cpf" type="text" placeholder="digite seu CPF" />
+                        <input required minlength="11" minlength="14" class="form-control" id="CPF" name="cpf" type="text" placeholder="ex: 111.111.111-11" />
                         <label for="inputLastName">CPF</label>
                     </div>
                     <div class="form-floating mb-3">
